request(navigation)#27582: fixed nav buttons on smaller mobile screens.

--- a/src/components/navigation/navigation.sass
+++ b/src/components/navigation/navigation.sass
@@ -30,6 +30,14 @@
     border-radius: 8px
     cursor: pointer
     padding: .35rem 1rem
+    text-align: center
+    @include phone
+      width: 100%
+      font-size: 14px
+      padding: .35rem
+      align-items: center
+      justify-content: center
+      display: flex
 
     &:hover
       transform: translateY(-1px)
